# PolyglotSci

./: .gitignore  README.md
BoseHubbard/docs/: main.typ  template.typ
BoseHubbard/julia/: Project.toml
BoseHubbard/julia/src/: BoseHubbardJulia.jl
BoseHubbard/presentation/: package-lock.json  package.json  svelte.config.js
BoseHubbard/presentation/mock/src/: main.rs
BoseHubbard/presentation/src/: app.css
BoseHubbard/presentation/src/lib/: PlotlyGraph.svelte  externals.d.ts
BoseHubbard/presentation/src/lib/Slides/: slide1.svelte  slide2.svelte  slide3.svelte  slide4.svelte  slide6.svelte
BoseHubbard/presentation/src/routes/[...slug]/: +page.svelte
BoseHubbard/presentation/static/vid/: BEC.webm
BoseHubbard/python/: compute_phase_diagram.py  plt_style.txt
BoseHubbard/python_with_rust/: answer.csv  main.py
BoseHubbard/python_with_rust/bose_hubbard/: Cargo.toml  pyproject.toml
BoseHubbard/python_with_rust/bose_hubbard/src/: lib.rs
BoseHubbard/rust/: Cargo.toml
BoseHubbard/rust/examples/: answer.csv  system.yaml
BoseHubbard/rust/src/: dev.rs  main.rs
BoseHubbardJulia/: Project.toml
BoseHubbardJulia/src/: BoseHubbardJulia.jl
SpeedTest/python/: main.py
SpeedTest/rust/: Cargo.toml
SpeedTest/rust/src/: main.rs
boseHubbard/julia/: compute_phase_diagram.jl
boseHubbard/python/: compute_phase_diagram.py
boseHubbard/rust/: Cargo.toml
boseHubbard/rust/src/: main.rs
