[package]
name = "bose_hubbard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bose_hubbard"
crate-type = ["cdylib"]

[dependencies]
itertools-num = "0.1.3"
nalgebra = "0.32.2"
pyo3 = "0.18.3"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
